--- a/src/contain/footer/footer.module.scss
+++ b/src/contain/footer/footer.module.scss
@@ -1,4 +1,4 @@
-.Footer {
+.footer {
   height: 120px;
   width: 100%;
 
@@ -8,7 +8,7 @@
   background: #F2F2F2;
 }
 
-.Contain {
+.contain {
   display: flex;
   height: 120px;
 
@@ -35,7 +35,7 @@
         color: #333333;
       }
   
-      & .Phone {
+      & .phone {
         margin: 0;
         padding: 0;
 
