--- a/src/contain/header/header.module.scss
+++ b/src/contain/header/header.module.scss
@@ -1,10 +1,10 @@
-.Header {
+.header {
     display: flex;
 
     margin: 32px 0 0 0;
 }
 
-.Logo {
+.logo {
     width: 182px;
     height: 36px;
     
@@ -37,7 +37,7 @@
     }
 }
 
-.Search {
+.search {
     margin: 11px 0 4px 0;
 
     display: flex;
