--- a/src/component/channel/channelCards/channelCards.module.scss
+++ b/src/component/channel/channelCards/channelCards.module.scss
@@ -1,4 +1,4 @@
-.ChannelCards {
+.channelCards {
     display: flex;
 
     height: 162px;
@@ -27,7 +27,7 @@
     }
 }
 
-.Description {
+.description {
     margin: 0;
     padding: 0;
 
