--- a/src/component/movie/movieCards/movieCards.module.scss
+++ b/src/component/movie/movieCards/movieCards.module.scss
@@ -1,4 +1,4 @@
-.MovieCard {
+.movieCard {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -10,7 +10,7 @@
     }
 }
 
-.Card {
+.card {
     position: relative;
 
     padding: 0;
@@ -35,16 +35,16 @@
         cursor: pointer;
     }
 
-    &:hover .Description {
+    &:hover .description {
         opacity: 1;
     }
 
-    &:hover .Background {
+    &:hover .background {
         background: rgba(51, 51, 51, 0.8);
     }
 }
 
-.Description {
+.description {
     position: absolute;
 
     z-index: 3;
@@ -66,7 +66,7 @@
     cursor: pointer;
 }
 
-.Background {
+.background {
     position: absolute;
         
     z-index: 2;
@@ -83,7 +83,7 @@
     cursor: pointer;
 }
 
-.FilmName {
+.filmName {
     margin: 16px 0 0 0;
 
     width: 280px;
