--- a/src/contain/footer/footer.module.scss
+++ b/src/contain/footer/footer.module.scss
@@ -1,4 +1,4 @@
-.footer {
+.Footer {
   height: 120px;
   width: 100%;
 
@@ -8,7 +8,7 @@
   background: #F2F2F2;
 }
 
-.contain {
+.Contain {
   display: flex;
   height: 120px;
 
@@ -35,7 +35,7 @@
         color: #333333;
       }
   
-      & .phone {
+      & .Phone {
         margin: 0;
         padding: 0;
 
