--- a/src/component/movie/movieCards/movieCards.module.scss
+++ b/src/component/movie/movieCards/movieCards.module.scss
@@ -1,4 +1,4 @@
-.movieCard {
+.MovieCard {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -10,7 +10,7 @@
     }
 }
 
-.card {
+.Card {
     position: relative;
 
     padding: 0;
@@ -35,16 +35,16 @@
         cursor: pointer;
     }
 
-    &:hover .description {
+    &:hover .Description {
         opacity: 1;
     }
 
-    &:hover .background {
+    &:hover .Background {
         background: rgba(51, 51, 51, 0.8);
     }
 }
 
-.description {
+.Description {
     position: absolute;
 
     z-index: 3;
@@ -66,7 +66,7 @@
     cursor: pointer;
 }
 
-.background {
+.Background {
     position: absolute;
         
     z-index: 2;
@@ -83,7 +83,7 @@
     cursor: pointer;
 }
 
-.filmName {
+.FilmName {
     margin: 16px 0 0 0;
 
     width: 280px;
